--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,5 +17,12 @@
       Nollaa
     </button>
   </form>
+  <form action="/set" method="POST">
+    <label for="value">Aseta arvo:</label>
+    <input type="number" name="value" id="value" />
+    <button type-"submit">
+      Aseta
+    </button>
+  </form>
 </body>
 </html>
