fixed thing causing test to fail

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Laskuri</title>
@@ -20,7 +20,7 @@
   <form action="/set" method="POST">
     <label for="value">Aseta arvo:</label>
     <input type="number" name="value" id="value" />
-    <button type-"submit">
+    <button type="submit">
       Aseta
     </button>
   </form>
